Added v2 version with controllers