@@ -6,7 +6,6 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 import com.github.fge.jsonpatch.JsonPatch;
 import com.github.fge.jsonpatch.JsonPatchException;
 
-import com.lbd.projectlbd.api.model.CheckpointModelApi;
 import com.lbd.projectlbd.dto.CheckpointDto;
 import com.lbd.projectlbd.dto.CommentToCheckpointDto;
 import com.lbd.projectlbd.entity.Checkpoint;
@@ -19,7 +18,6 @@ import com.lbd.projectlbd.repository.CommentToCheckpointRepository;
 import com.lbd.projectlbd.repository.DelegationRepository;
 import lombok.AllArgsConstructor;
 
-import org.hibernate.annotations.Check;
 import org.springframework.stereotype.Service;
 
 import javax.persistence.EntityNotFoundException;
@@ -47,32 +45,17 @@ public class CheckpointServiceImpl implements CheckpointService {
      * Utilities */
     @Override public void add(Checkpoint checkpoint) {
         checkpointRepository.save(checkpoint);
-
     }
 
 
     @Override
-//    public List<CheckpointDto> getCheckpoint(Long id){
-//        Optional<Delegation> delegation= delegationRepository.findById(id);
-//
-//        return  delegation.map(delegation1 -> delegation1.getCheckpointSet().
-//                        stream().map(checkpoint ->{
-//                            CheckpointDto checkpointDto= checkpointMapper.mapCheckpointToCheckpointDto(checkpoint);
-//                            checkpointDto.setCommentToCheckpointDtos(commentToCheckpointMapper.mapCommentToCheckpointListToCommentToCheckpointDtoList(checkpoint.getCommentToCheckpointList()));
-//                            return checkpointDto;
-//                        }).collect(Collectors.toList())
-//                )
-//                .orElseThrow(()->new EntityNotFoundException("Delegation not found!"));
-//
-//    }
-
     public List<CheckpointDto> getCheckpoint(Long delegationId){
         Optional<Delegation> delegation= delegationRepository.findById(delegationId);
 
         return  delegation.map(delegation1 -> delegation1.getCheckpointSet().
                         stream().map(checkpoint ->{
-                            CheckpointDto checkpointDto= checkpointMapper.mapCheckpointToCheckpointDto(checkpoint);
-                            checkpointDto.setCommentToCheckpointDtos(Arrays.asList(getOneComment(checkpoint.getId())));
+                            CheckpointDto checkpointDto= checkpointMapper.mapEntityToDto(checkpoint);
+                            checkpointDto.setCommentToCheckpointDtos(List.of(getOneComment(checkpoint.getId())));
                             return checkpointDto;
                         }).collect(Collectors.toList())
                 )
@@ -103,23 +86,24 @@ public class CheckpointServiceImpl implements CheckpointService {
 
         try {
             Checkpoint checkpoint = checkpointRepository.findById(id).orElseThrow(() -> new EntityNotFoundException("Checkpoint with id=" + id + " not found!"));
-            Checkpoint checkpointPatched = applyPatchToCheckpoint(patch, checkpoint);
-            update(id,checkpointMapper.mapCheckpointToCheckpointDto (checkpointPatched) );
+            CheckpointDto checkpointPatched = applyPatchToCheckpoint(patch, checkpoint);
+            update(id,checkpointPatched);
         } catch (JsonPatchException | JsonProcessingException e) {
             throw new RuntimeException(e);
         }
     }
-    private Checkpoint applyPatchToCheckpoint(JsonPatch patch, Checkpoint targetCheckpoint) throws JsonPatchException, JsonProcessingException {
+    private CheckpointDto applyPatchToCheckpoint(JsonPatch patch, Checkpoint targetCheckpoint) throws JsonPatchException, JsonProcessingException {
         ObjectMapper objectMapper = new ObjectMapper();
-        CheckpointDto checkpointDto = checkpointMapper.mapCheckpointToCheckpointDto(targetCheckpoint);
+        CheckpointDto checkpointDto = checkpointMapper.mapEntityToDto(targetCheckpoint);
+        checkpointDto.setCommentToCheckpointDtos(commentToCheckpointMapper.mapEntityListToDtoList(targetCheckpoint.getCommentToCheckpointList()));
         JsonNode patched = patch.apply(objectMapper.convertValue(checkpointDto, JsonNode.class));
-        return objectMapper.treeToValue(patched, Checkpoint.class);
+        return objectMapper.treeToValue(patched, CheckpointDto.class);
     }
     @Override
     public void addComment(Long id, CommentToCheckpointDto commentToCheckpointDto){
         Checkpoint checkpoint = checkpointRepository.findById(id).orElseThrow(() -> new EntityNotFoundException("Checkpoint with id=" + id + " not found!"));
         commentToCheckpointDto.setDate(new Timestamp(System.currentTimeMillis()));
-        CommentToCheckpoint commentToCheckpoint = commentToCheckpointMapper.mapCommentToCheckpointDtoToCommentToCheckpoint(commentToCheckpointDto);
+        CommentToCheckpoint commentToCheckpoint = commentToCheckpointMapper.mapDtoToEntity(commentToCheckpointDto);
 
         commentToCheckpoint.setCheckpoint(checkpoint);
         commentToCheckpointRepository.save(commentToCheckpoint);
@@ -133,16 +117,30 @@ public class CheckpointServiceImpl implements CheckpointService {
         }
        checkpoint.getCommentToCheckpointList().sort(Comparator.comparing(CommentToCheckpoint::getDate));
        CommentToCheckpoint commentToCheckpoint= checkpoint.getCommentToCheckpointList().get(checkpoint.getCommentToCheckpointList().size()-1);
-       return commentToCheckpointMapper.mapCommentToCheckpointToCommentToCheckpointDto(commentToCheckpoint);
+       return commentToCheckpointMapper.mapEntityToDto(commentToCheckpoint);
 
     }
     @Override
     public List<CommentToCheckpointDto> getAllComment(Long id){
         Checkpoint checkpoint = checkpointRepository.findById(id).orElseThrow(() -> new EntityNotFoundException("Checkpoint with id=" + id + " not found!"));
-      return checkpoint.getCommentToCheckpointList().stream().map(commentToCheckpoint -> commentToCheckpointMapper.mapCommentToCheckpointToCommentToCheckpointDto(commentToCheckpoint)).collect(Collectors.toList());
+      return checkpoint.getCommentToCheckpointList().stream().map(commentToCheckpoint -> commentToCheckpointMapper.mapEntityToDto(commentToCheckpoint)).collect(Collectors.toList());
 
     }
 
+
+    //    public List<CheckpointDto> getCheckpoint(Long id){
+//        Optional<Delegation> delegation= delegationRepository.findById(id);
+//
+//        return  delegation.map(delegation1 -> delegation1.getCheckpointSet().
+//                        stream().map(checkpoint ->{
+//                            CheckpointDto checkpointDto= checkpointMapper.mapCheckpointToCheckpointDto(checkpoint);
+//                            checkpointDto.setCommentToCheckpointDtos(commentToCheckpointMapper.mapCommentToCheckpointListToCommentToCheckpointDtoList(checkpoint.getCommentToCheckpointList()));
+//                            return checkpointDto;
+//                        }).collect(Collectors.toList())
+//                )
+//                .orElseThrow(()->new EntityNotFoundException("Delegation not found!"));
+//
+//    }
 
 
 
